2013-08-06  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-p): Don't check non-nullness of the `properties'
	slot , which can indeed be nil.
	(frameset-live-filter-alist, frameset-persistent-filter-alist):
	Move entry for `left' from persistent to live filter alist.
	(frameset-filter-alist, frameset--minibufferless-last-p, frameset-save):
	Doc fixes.
	(frameset-filter-params): When restoring a frame, copy items added to
	`filtered', to avoid unwittingly modifying the original parameters.
	(frameset-move-onscreen): Rename from frameset--move-onscreen.  Doc fix.
	(frameset--restore-frame): Fix reference to frameset-move-onscreen.

	* dired.el (dired-insert-directory): Revert change in revno:113117
	to use looking-at-p instead of looking-at.  (Bug#15028)

2013-08-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	Revert introduction of isearch-filter-predicates (bug#14714).
	Rely on add-function instead.
	* isearch.el (isearch-filter-predicates): Rename it back to
	isearch-filter-predicate.
	(isearch-message-prefix): Use advice-function-mapc and advice
	properties to get the isearch-message-prefix.
	(isearch-search, isearch-lazy-highlight-search): Revert to funcall
	instead of run-hook-with-args-until-failure.
	(isearch-filter-visible): Not obsolete any more.
	* loadup.el: Preload nadvice.
	* replace.el (perform-replace): Revert to funcall
	instead of run-hook-with-args-until-failure.
	* wdired.el (wdired-change-to-wdired-mode): Use add-function.
	* dired-aux.el (dired-isearch-filenames-mode): Rename from
	dired-isearch-filenames-toggle; make it into a proper minor mode.
	Use add/remove-function.
	(dired-isearch-filenames-setup, dired-isearch-filenames-end):
	Call the minor-mode rather than add/remove-hook.
	(dired-isearch-filter-filenames):
	Remove isearch-message-prefix property.
	* info.el (Info--search-loop): New function, extracted from Info-search.
	Funcall isearch-filter-predicate instead of